<resources>
    <string name="app_name">P0X4</string>

    <!--Strings for the part of new players-->
    <string name="players_title_fragment">ADD PLAYERS</string>
    <string name="players_write_name">Write the name</string>
    <string name="players_button_add">+</string>
    <string name="players_button_remove">-</string>
    <string name="players_button_next">START</string>

    <!--Strings for the part of scores-->
    <string name="scores_title_fragment">SCORES</string>
    <string name="scores_button_next">GO BETS</string>

    <!--String for the part of bets-->
    <string name="bets_title_fragment">BETS</string>
    <string name="bets_write_bet">Write the bet</string>
    <string name="bets_button_next">PLAY</string>
    <string name="bets_edittext_empty">You need to write a bet</string>

    <!--String for the part of results-->
    <string name="results_title_fragment">RESULTS</string>
    <string name="results_write_result">Write the result</string>
    <string name="results_button_next">GO SCORES</string>
    <string name="results_edittext_empty">You need to write a result</string>

    <!--Dialogs-->
    <string name="dialog_button_accept">ACCEPT</string>
    <string name="dialog_title_warning">WARNING</string>
    <string name="dialog_body_bets_not_equals">The sum of the bets cannot be equals to the current cards.</string>
    <string name="dialog_body_none_has_won">None has won this round. We repeat it.</string>
    <string name="dialog_body_results_equals">The sum of the results must be equals to the current cards.</string>
    <string name="dialog_body_minimun_num_players">At least you need to be 2 players.</string>

    <!--String for profile-->
    <string name="profile_title">PROFILE</string>
    <string name="profile_name">Name: #</string>
    <string name="profile_total_matches_played">Matches played: #</string>
    <string name="profile_total_matches_won">Matches won: #</string>


</resources>
