<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/players_write_name"
        android:layout_toStartOf="@+id/bAdd"
        android:background="@drawable/p0x4_edit_text_default"/>

    <Button
        android:id="@+id/bAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/players_button_add"/>

    <Button
        android:id="@+id/bRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/players_button_remove"
        android:visibility="gone"/>

</RelativeLayout>