<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_mid">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_mid"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            style="@style/p0x4_text_view_list"/>

        <TextView
            android:id="@+id/tvTotalMathesPlayed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_low"
            android:layout_marginBottom="@dimen/margin_low"
            android:text="@string/profile_total_matches_played"
            style="@style/p0x4_text_view_list"/>

        <TextView
            android:id="@+id/tvTotalMatchesWon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_total_matches_won"
            style="@style/p0x4_text_view_list"/>

    </LinearLayout>


</LinearLayout>